# downfav

./: .gitignore  .rustfmt.toml  AUTHORS  Cargo.toml  README.md
src/: main.rs
src/args/: errors.rs  mod.rs
src/commands/: addaccount.rs  errors.rs  mod.rs  removeaccount.rs
src/config/: account.rs  config.rs  errors.rs  favourite.rs  mod.rs
src/filesystem/: config.rs  storage.rs
src/storage/: attachment.rs  data.rs  filesystem.rs  helpers.rs  joplin.rs  mod.rs  org.rs  storage.rs
src/storage/markdown/: config.rs  mod.rs  storage.rs
src/storage/org/: config.rs  storage.rs
template/: Cargo.toml
templater/: Cargo.toml
templater/src/: main.rs
